src/objects/loan__Broker_Transactions__c.object
<CustomObject>
    <description>Broker Transactions</description>
    <fields>
        <fullName>loan__ACH_Filename__c</fullName>
        <label>ACH Filename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Broker Account</description>
        <inlineHelpText>Broker Account</inlineHelpText>
        <label>Broker Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broker Transactions</relationshipLabel>
        <relationshipName>Broker_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Broker__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup with Broker</description>
        <label>Broker</label>
        <referenceTo>loan__Broker__c</referenceTo>
        <relationshipLabel>Broker Transactions</relationshipLabel>
        <relationshipName>Broker_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Broker Contact</description>
        <inlineHelpText>Broker Contact</inlineHelpText>
        <label>Broker Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Broker Transactions</relationshipLabel>
        <relationshipName>Broker_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <description>Reference</description>
        <inlineHelpText>Reference</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Sent_To_ACH_On__c</fullName>
        <label>Sent To ACH On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Sent_To_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__System_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify is user posted this transaction manually.</description>
        <inlineHelpText>To identify is user posted this transaction manually.</inlineHelpText>
        <label>System Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Code__c</fullName>
        <description>Transaction Codes</description>
        <inlineHelpText>Transaction Codes</inlineHelpText>
        <label>Transaction Code</label>
        <picklist>
            <picklistValues>
                <fullName>Commission Disbursement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Chargeback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upfront Commission Disbursement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Description__c</fullName>
        <defaultValue>&quot;Funds Added&quot;</defaultValue>
        <label>Transaction Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Broker Transaction</label>
    <nameField>
        <displayFormat>BT-{000000000}</displayFormat>
        <label>Broker Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>